[TASK]    Set fallback values for indexer starting pages
[TASK]    Use FileResourceFactory instead of fileRepository->findFileReferenceByUid()
[TASK]    Don't use deprecated method getTwoLetterIsoCode() anymore, replace with getTypo3Language() and getWebsiteTitle()
[TASK]    Remove $frontendController from AbstractPlugin
[TASK]    Make $request and $languageId public in PluginBase
[TASK]    Migrate MathUtility::convertToPositiveInteger
[TASK]    Migrate $pageRepository->enableFields

Version 5.5.2, 23 August 2024
[BUGFIX]  Fix cropping if "resultChars" is empty. Thanks to Andreas Kießling. https://github.com/tpwd/ke_search/issues/242
[BUGFIX]  Fix regression in page indexer if translated page is not available. Thanks to Jens Vollmer. https://github.com/tpwd/ke_search/issues/243

Version 5.5.1, 16 August 2024
[FEATURE] Add garbage collection for statistics table
[BUGFIX]  Use correct table names for query builder or connection. Thanks to Andreas Kießling. https://github.com/tpwd/ke_search/issues/228
[BUGFIX]  Respect configured Doktypes while Auto-Tagging. Thanks to magicHatOfTYPO3. https://github.com/tpwd/ke_search/pull/235
[TASK]    Add check if MySQL indexes are enabled on the index table and show an error in the backend module if not

Version 5.5.0, 17 May 2024
[FEATURE] Add pagination in the backend module "Indexed content" function and avoid out of memory error. https://github.com/tpwd/ke_search/issues/100
[FEATURE] Remove obsolete records during incremental indexing. Records and files which should not be indexed (e.g. pages with "no_index" flag) are now removed from the index during incremental indexing. Previously only hidden and deleted pages, records and files were removed.
[BUGFIX]  Render file preview in result list only for files which are in the "imagefile_ext" list (images and PDF files). https://github.com/tpwd/ke_search/issues/60