@@ -22,6 +22,7 @@ namespace Tpwd\KeSearch\Lib;
 use Tpwd\KeSearch\Plugins\PluginBase;
 use TYPO3\CMS\Core\Context\Context;
 use TYPO3\CMS\Core\Context\LanguageAspect;
+use TYPO3\CMS\Core\Domain\Repository\PageRepository;
 use TYPO3\CMS\Core\Information\Typo3Version;
 use TYPO3\CMS\Core\Type\Bitmask\PageTranslationVisibility;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
@@ -274,7 +275,7 @@ class Filters
     }
 
     /**
-     * replace the commaseperated option list with the original option records from DB
+     * replace the comma separated option list with the original option records from DB
      * @param array $rows The filter records as array
      * @return array The filter records where the option value was replaced with the option records as array
      */
@@ -303,22 +304,29 @@ class Filters
     {
         /** @var LanguageAspect $languageAspect */
         $languageAspect = GeneralUtility::makeInstance(Context::class)->getAspect('language');
-        $LanguageUid = $languageAspect->getContentId();
-        $LanguageMode = $languageAspect->getLegacyLanguageMode();
+        /** @var PageRepository $pageRepository */
+        $pageRepository = GeneralUtility::makeInstance(PageRepository::class);
+
+        if (GeneralUtility::makeInstance(Typo3Version::class)->getMajorVersion() < 13) {
+            // @extensionScannerIgnoreLine
+            $pageRecord = $GLOBALS['TSFE']->page;
+        } else {
+            $pageRecord = $this->pObj->request->getAttribute('frontend.page.information')->getPageRecord();
+        }
 
         // see https://github.com/teaminmedias-pluswerk/ke_search/issues/128
-        $pageTranslationVisibility = new PageTranslationVisibility((int)$GLOBALS['TSFE']->page['l18n_cfg']);
+        $pageTranslationVisibility = new PageTranslationVisibility((int)$pageRecord['l18n_cfg']);
+
         if ($pageTranslationVisibility->shouldHideTranslationIfNoTranslatedRecordExists()) {
             $LanguageMode = 'hideNonTranslated';
         }
         if (is_array($rows) && count($rows)) {
             foreach ($rows as $key => $row) {
-                if (is_array($row) && $LanguageUid > 0) {
-                    $row = $GLOBALS['TSFE']->sys_page->getRecordOverlay(
+                if (is_array($row) && $languageAspect->getContentId() > 0) {
+                    $row = $pageRepository->getLanguageOverlay(
                         $table,
                         $row,
-                        $LanguageUid,
-                        $LanguageMode
+                        $languageAspect
                     );
 
                     if (is_array($row)) {
